--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@ border:3px groove blue;background-color:transparent;float:right; width:200px; he
 
 
 
-<footer>
+*/<footer>
 <p>Class Example of a Static Website &copy; Harold Crumpton 2016</p>
 <ul>
                 <li><a href="index.html">Index</a></li>
@@ -404,6 +404,6 @@ window.onload=swapImage;
 
 <img name="slide" src="slide1.jpg" height="200" width="300" float="right">
 
-
+/*
 </body>
 </html>
