--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ border:3px groove blue;background-color:transparent;float:right; width:200px; he
   <p>Suspendisse dolor magna, scelerisque id sapien dapibus, laoreet pellentesque leo. Ut faucibus ac massa vel finibus. Sed malesuada cursus lacus, a volutpat eros commodo vel. Nulla pretium erat sed leo rhoncus, vitae commodo neque aliquet. Suspendisse commodo pretium semper. Sed in semper tortor, pulvinar venenatis diam. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vivamus a elementum est. Aliquam luctus ut urna at feugiat. Donec turpis tortor, tincidunt at rutrum at, mattis at ante. Nunc varius lorem auctor erat finibus consectetur. Vestibulum sagittis neque quam, ut mattis odio vulputate sed. Nam ipsum augue, vulputate ut dolor vitae, bibendum semper sem. Maecenas vitae posuere dui. Phasellus tristique ipsum diam, ut ultricies diam euismod varius. Praesent aliquet felis ac felis tincidunt sodales.</p>
 </div>
 </div>
-
+*/
 <div class="row">
 <div class="container">
 <h2>This is a residential community goal</h2>
@@ -366,7 +366,7 @@ border:3px groove blue;background-color:transparent;float:right; width:200px; he
 
 
 
-*/<footer>
+<footer>
 <p>Class Example of a Static Website &copy; Harold Crumpton 2016</p>
 <ul>
                 <li><a href="index.html">Index</a></li>
