--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ html  {
 }
 body {
   overflow: auto;
-  height: 600%;
+  height: 700px;
   width: 1100px;
   margin: 0 auto; /* center */
   padding:0;
