--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@ html  {
 }
 body {
   overflow: auto;
-  height: 700px;
+  height: 100%;
   width: 1100px;
   margin: 0 auto; /* center */
   padding:0;
-  border: 1px solid #474747;
-  border-width: 0 3px;
+  border: 0px solid #474747;
+  border-width: 0 0px;
   background: #3399ff;
   font-family:Arial, Helvetica, sans-serif;
 }          
@@ -38,7 +38,7 @@ body {
   background:url(images/slide35aa.jpg);
   margin: 3px;
   padding: 3px;
-  width: 95%;
+  width: 100%;
   height:760px;
   background-position: center;
   background-repeat: no-repeat;
@@ -47,7 +47,7 @@ body {
 #container-header h1{
   width: 100 %;
   height: 20px;
-  padding-bottom:5px;
+  padding-bottom:0px;
   text-align: center;
   color: #ffccff; 
 }
@@ -115,8 +115,8 @@ body {
 }
 /*background hover image is here */
 #address li a:hover{
-  float:left;
-  width:150px;
+  float:center;
+  width:155px;
   height: 75px;
   padding-top: 33px;
   height: 75px;
@@ -288,7 +288,7 @@ border:3px groove blue;background-color:transparent;float:right; width:200px; he
 <div class="row">
 <div class="container">
 <h2>Historic Homes nearing completion</h2>
-<img src="images/slide6.jpg" alt="slide2">
+<img src="images/slide6.jpg" alt="slide6">
 
  <p>Sed malesuada cursus lacus, a volutpat eros commodo vel. Nulla pretium erat sed leo rhoncus, vitae commodo neque aliquet. Suspendisse commodo pretium semper. Sed in semper tortor, pulvinar venenatis diam. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vivamus a elementum est. Aliquam luctus ut urna at feugiat. Donec turpis tortor, tincidunt at rutrum at, mattis at ante. Nunc varius lorem auctor erat finibus consectetur. </p>
 
@@ -403,6 +403,7 @@ window.onload=swapImage;
 </script>
 
 <img name="slide" src="slide1.jpg" height="200" width="300" float="right">
+
 
 </body>
 </html>
