--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ border:3px groove blue;background-color:transparent;float:right; width:200px; he
 <div class="row">
 <div class="container">
 <h2>Home Style</h2>
-<img src="images/slide7.jpg" alt="slide7">
+<img src="images/slide7.JPG" alt="slide7">
  
 <p>Suspendisse efficitur molestie ante, sed convallis ante egestas vel. Cras suscipit lacinia metus, posuere volutpat est efficitur vel. Cras at lorem interdum, efficitur elit sit amet, blandit est! Curabitur eu massa et dolor venenatis consectetur in vitae lacus. Nunc rhoncus metus id vestibulum tincidunt. Suspendisse dolor magna, scelerisque id sapien dapibus, laoreet pellentesque leo. Ut faucibus ac massa vel finibus. </p>
 
@@ -288,7 +288,7 @@ border:3px groove blue;background-color:transparent;float:right; width:200px; he
 <div class="row">
 <div class="container">
 <h2>Historic Homes nearing completion</h2>
-<img src="images/slide6.jpg" alt="slide6">
+<img src="images/slide6.JPG" alt="slide6">
 
  <p>Sed malesuada cursus lacus, a volutpat eros commodo vel. Nulla pretium erat sed leo rhoncus, vitae commodo neque aliquet. Suspendisse commodo pretium semper. Sed in semper tortor, pulvinar venenatis diam. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vivamus a elementum est. Aliquam luctus ut urna at feugiat. Donec turpis tortor, tincidunt at rutrum at, mattis at ante. Nunc varius lorem auctor erat finibus consectetur. </p>
 
@@ -343,7 +343,7 @@ border:3px groove blue;background-color:transparent;float:right; width:200px; he
 <div class="container">
 <h2>This is a commercial community goal</h2>
 
- <p><img src="images/slide9.jpg" alt="slide9">
+ <p><img src="images/slide9.JPG" alt="slide9">
  Cras suscipit lacinia metus, posuere volutpat est efficitur vel. Cras at lorem interdum, efficitur elit sit amet, blandit est. Curabitur eu massa et dolor venenatis consectetur in vitae lacus. Nunc rhoncus metus id vestibulum tincidunt. Cras et facilisis nibh. Nulla rutrum augue vel blandit varius. Vivamus volutpat justo ut velit scelerisque, et dictum turpis pretium. Fusce eget sem mauris. Pellentesque est ligula, porta id malesuada vel, ultricies suscipit ipsum. Nulla leo dui, sollicitudin eget pretium ac, eleifend quis dolor. Duis et felis sapien.</p>
 
   <p>Suspendisse dolor magna, scelerisque id sapien dapibus, laoreet pellentesque leo. Ut faucibus ac massa vel finibus. Sed malesuada cursus lacus, a volutpat eros commodo vel. Nulla pretium erat sed leo rhoncus, vitae commodo neque aliquet. Suspendisse commodo pretium semper. Sed in semper tortor, pulvinar venenatis diam. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vivamus a elementum est. Aliquam luctus ut urna at feugiat. Donec turpis tortor, tincidunt at rutrum at, mattis at ante. Nunc varius lorem auctor erat finibus consectetur. Vestibulum sagittis neque quam, ut mattis odio vulputate sed. Nam ipsum augue, vulputate ut dolor vitae, bibendum semper sem. Maecenas vitae posuere dui. Phasellus tristique ipsum diam, ut ultricies diam euismod varius. Praesent aliquet felis ac felis tincidunt sodales.</p>
@@ -354,7 +354,7 @@ border:3px groove blue;background-color:transparent;float:right; width:200px; he
 <div class="container">
 <h2>This is a residential community goal</h2>
 
- <p><img src="images/slide5.jpg" alt="slide5">
+ <p><img src="images/slide5.JPG" alt="slide5">
   Suspendisse efficitur molestie ante, sed convallis ante egestas vel. Cras suscipit lacinia metus, posuere volutpat est efficitur vel. Cras at lorem interdum, efficitur elit sit amet, blandit est. Curabitur eu massa et dolor venenatis consectetur in vitae lacus. Nunc rhoncus metus id vestibulum tincidunt. Cras et facilisis nibh. Nulla rutrum augue vel blandit varius. Vivamus volutpat justo ut velit scelerisque, et dictum turpis pretium. </p>
 
   <p>Sed malesuada cursus lacus, a volutpat eros commodo vel. Nulla pretium erat sed leo rhoncus, vitae commodo neque aliquet. Suspendisse commodo pretium semper. Sed in semper tortor, pulvinar venenatis diam. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vivamus a elementum est. Aliquam luctus ut urna at feugiat. Donec turpis tortor, tincidunt at rutrum at, mattis at ante. Nunc varius lorem auctor erat finibus consectetur. </p>
@@ -385,12 +385,12 @@ var i = 0;
 var path = new Array();
  
 // LIST OF IMAGES
-path[0] = "Images/slide61.jpg";
-path[1] = "Images/slide55.jpg";
-path[2] = "Images/slide53.jpg";
-path[3] = "Images/slide51.jpg";
-path[4] = "Images/slide56.jpg";
-path[5] = "Images/slide61.jpg";
+path[0] = "images/slide61.jpg";
+path[1] = "images/slide55.jpg";
+path[2] = "images/slide53.jpg";
+path[3] = "images/slide51.jpg";
+path[4] = "images/slide56.jpg";
+path[5] = "images/slide61.jpg";
 
 function swapImage()
 {
