--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ window.onload=startTime;
 </script>
 
 
-<div id="clock" style="font-size:35px;color:blue;text-shadow:2px 2px 2px pale-blue; text-orientation:centered;
+<div id="clock" style="font-size:35px;color:fff;text-shadow:2px 2px 2px pale-blue; text-orientation:centered;
 border:3px groove blue;background-color:transparent;float:right; width:200px; height:60px"></div>
 
 
