changed background colr of the clock.

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ return i
 
 
 <div id="clock" style="font-size:35px;color:fff;text-shadow:2px 2px 2px pale-blue; text-orientation:centered;
-border:3px groove blue;background-color:transparent;float:right; width:200px; height:60px"></div>
+border:3px groove blue;background-color:red;float:right; width:200px; height:60px"></div>
 
 
 
